# emojicrunch

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  ssh-macos.yml
src/: apple.rs  directories.rs  emojidatapngs.rs  error.rs  main.rs  notoemoji.rs  optimize.rs  options.rs  provider.rs  resize.rs  twemoji.rs  webp.rs
zopflipng/: Cargo.toml
zopflipng-sys/: Cargo.toml  build.rs
zopflipng/src/: lib.rs
