[package]
name = "emojicrunch"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["zopflipng", "zopflipng-sys"]

[dependencies]
arcstr = { version = "1.2.0", features = ["serde"] }
bytemuck = "1.21.0"
clap = { version = "4.5.29", features = ["derive"] }
fast_image_resize = { version = "5.1.1", features = ["image"] }
fs-err = "3.1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
libwebp-sys = "0.12.1"
oxipng = { version = "9.1.3", default-features = false, features = ["zopfli"] }
rayon = "1.10.0"
resvg = { version = "0.44.0", default-features = false }
rustybuzz = "0.20.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tiny-skia = { version = "0.11.4", default-features = false, features = [
    "simd",
] }
ttf-parser = "0.25.1"
usvg = { version = "0.44.0", default-features = false }
webp = { git = "https://github.com/Nerixyz/webp-rs", branch = "deps/update-libwebp" }
zopflipng = { version = "0.1.0", path = "zopflipng" }

[profile.release]
lto = "fat"
